@@ -693,6 +693,7 @@ ifeq "$(findstring profdeep,$(GRADE))" ""
 		cmp_uint8 \
 		dir_test \
 		final_excp \
+		ho_array_ops \
 		int8_static_data \
 		init_excp \
 		intermod_try_goal \
