@@ -448,12 +448,14 @@ Changes to the Mercury standard library:
    - snoc/3
    - find_first_match/3
 
-* The following function has been added to the array module:
+* The following functions and predicates have been added to the array module:
 
    - det_least_index/1
    - semidet_least_index/1
    - det_greatest_index/1
    - semidet_greatest_index/1
+   - foldl_corresponding/5
+   - foldl2_corresponding/7
 
    The following functions in the array module have been deprecated:
 
